stylesheet.less
/* ... */
.main a, .nav a, .nav .text {
	transition: .2s;
	padding-bottom: .3em;
	cursor: pointer;
	&:hover {
		color: @color-swatch4;
		padding-bottom: 0;
	}
}
/* 
	HEADER IMAGE
*/

.header-image {
	margin-top:60px;
}

/* 
	HEADER NAV
*/

.nav {
	float: left;
	width: 100%;
	a, a:hover {
		border-bottom: none;
	}
}

.widget.extendednavigation {
	.clearfix;
}

.widget .extendednavigation ul {
	text-align: center;
	border-top:1px solid rgba(0, 0, 0, 0.05);
}
.widget .extendednavigation li > .text,
.widget .extendednavigation ul li a {
	padding: 0;
}
.widget .extendednavigation ul li {
	float: none;
	display: inline-block;
}
.widget .extendednavigation ul li.folder:after {
	display: none;
}
.widget .extendednavigation ul li:hover ul {
	background: @color-swatch7;
}
.widget .extendednavigation ul li.folder .text {
	display: inline;
}
.widget .extendednavigation ul li.folder .text:hover {
	color:@font-swatch6-color; 
}
.widget .extendednavigation {
	width: 100%;
	text-align: center;
	ul {
		width: 100%;
	}
}

/* 
	FORMS
*/
input[type=search],
input[type=text],
input[type=email],
textarea,
.widget.profile form fieldset input,
.signupform fieldset input {
	padding: 5px 10px;
	border:0;
	text-indent: 0;
	background-color:lighten(@color-swatch5,40%);
	-webkit-transition: box-shadow .2s;
	-moz-transition: box-shadow .2s;
	-ms-transition: box-shadow .2s;
	transition: box-shadow .2s;
	&:focus {
	}
}
textarea {
	resize: vertical;
	min-height: 150px;
}
input[type=search],
input[type=text],
input[type=email],
.signupform fieldset input {
	height: 42px;	
	width: 85%;
}

.contactform input[type=email] {
	width: 100%;
	margin-bottom: 20px;
}

input[type="search"]::-webkit-search-decoration {
	display: none;
}

/*
	BUTTONS
*/

button.btn,
.widget.profile form button,
.signupform fieldset button,
.blog-search-submit-button,
.widget.feature .feature-bgimg .content button.btn,
.contactform button.btn,
.widget.paypalbuynow .widget.button.paypal,
.widget.tweet a,
.widget.dropbox button,
.widget.profile .bk-profile-socialicons span a,
.widget.socialicons span a {
	background-color: @color-swatch3;
	border: none;
	-webkit-transition: background-color .2s;
	-moz-transition: background-color .2s;
	-ms-transition: background-color .2s;
	transition: background-color .2s;
	&:hover {
		background-color: lighten(@color-swatch3,5%);
		border: none;
	}
}

.widget.profile .bk-profile-socialicons span a,
.widget.socialicons span a {
	border-radius: 100%;
}

footer.bk-footer .widget.profile .bk-profile-socialicons span a {
	background-color:@color-swatch2;
}

hr.line {
	background-color: fade(@color-swatch5, 25%);
	height:1px;
}

button.btn,
.widget.profile form button,
.signupform fieldset button,
.blog-search-submit-button,
.widget.feature .feature-bgimg .content button.btn,
.contactform button.btn,
.widget.clicktocall a,
.widget.clicktocall a:hover {
	padding: 9px 14px 9px;	
}

.widget.tweet a:hover {
	color: @color-swatch7;
	padding-bottom: 14px;
}

.widget.clicktocall a {
	border: 2px solid @color-swatch3;
	display: inline-block;
	margin-bottom: 1em;
	&:hover {
		border-color: darken(@color-swatch3, 10%);
	}
}

.widget.profile form button {
	padding: 10px 14px 8px;
}

.contactform button.btn {
	margin-top:20px;
}

/*
	TWITTER
*/

.widget.twitter ul li a,
.widget.twitter ul li span a {
	text-decoration: none;
	font-size: inherit;
	font-weight: inherit;
	&:hover {
		text-decoration: none;
	}
}

.twitter-profile-pic {
	a {
		border: 0;
	}
}
.twitter ul li time {
	font-size: inherit;
}

/*
	IMAGES
*/
.widget.gallery ul li span.inner a {
	&:hover {
		border: none;
	}
}
.widget.gallery {
	margin: 0;
}

.widget span img {
	margin:0px auto;
}

.widget span.image-title {
	display:none;
}

/*
	MENU
*/
.dietary-icon,
.menu .menu-section-item-dietary-props .dietary-icon,
.menu .menu-info .dietary-icon {
	border-radius: 4px;
	font-size: bkscale(@font-swatch5-font-size, 0.9);
	margin-top: 1em;
	padding: 1px 8px;
	background-color:@color-swatch2;
	color: #fff;
}

.menu-item-nutritional-title {
	font-weight: @font-swatch9-font-weight;
}

.menu-header h2:before, .widget.menu .main .menu-subsection-header h2:before, .menu-header h1:before {
    content: "★";
    display: inline-block;
    position: relative;
    vertical-align: middle;
    font-size:20px;
    margin-right:10px;
}

.widget.menu .main .menu-subsection-header h2:after, .menu-header h1:after  {
    content: "★";
    display: inline-block;
    position: relative;
    vertical-align: middle;
    font-size:20px;
    margin-left:10px;
}

.menu-item {
	text-align:center;
}

.main .menu-subsection {
	border:0;
	background-color:transparent;
}

.menu-subsection-wrapper.menu-subsection-promoted {
	background-color: rgba(1, 1, 1, 0.05);
	padding:10px;
}

/*	===============================
	Globals
	=============================== */

::-moz-selection { background-color: fade(@color-swatch3, 85%); }
::selection { background-color: fade(@color-swatch3, 85%); }

body {
	background-color: @color-swatch1;
	background-size: 100% auto;
	background-attachment: fixed;
	padding: 2%;
	-webkit-font-smoothing: antialiased;
	text-rendering: optimizeLegibility;
	background-repeat:no-repeat;
}
.page-wrap {
	max-width: 1200px;
	margin: 0 auto;
	background: @color-swatch1;
	padding-left: 2%;
	padding-right: 2%;
	padding-top: 0;
}
.section.main {
}

.main.menu-page {
	padding:0;
}
/* ... */

